@@ -405,8 +405,12 @@ void print_help(int mode) {
 "\n"
 "-connect string        For use with \"vncviewer -listen\" reverse connections.\n"
 "                       If \"string\" has the form \"host\" or \"host:port\"\n"
-"                       the connection is made once at startup.  Use commas\n"
-"                       for a list of host's and host:port's.\n"
+"                       the connection is made once at startup.\n"
+"\n"
+"                       Use commas for a list of host's and host:port's.\n"
+"                       E.g. -connect host1,host2 or host1:0,host2:5678.\n"
+"                       Note that to reverse connect to multiple hosts at the\n"
+"                       same time you will likely need to also supply: -shared\n"
 "\n"
 "                       Note that unlike most vnc servers, x11vnc will require a\n"
 "                       password for reverse as well as for forward connections.\n"
